k3s/uptime-kuma/uptime-kuma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: uptime-kuma
